# zsh-history-utils

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yml  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  zsh_history_utils.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml  renovate.json
.github/workflows/: biome.yml  ci.yml  commitizen.yml  editorconfig.yml  mypy.yml  pyright.yml  reviewdog.yml  ruff.yml  test.yml
