[project]
name = "zsh-history-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]

[tool.mypy]

# Platform configuration
python_version = "3.13"

# Untyped definitions and calls
disallow_untyped_defs = false # see ruff flake8-annotations (ANN)
disallow_incomplete_defs = false # see ruff flake8-annotations (ANN)

# Configuring warnings
warn_unused_ignores = true

# Miscellaneous strictness flags
strict = true

# Miscellaneous
warn_unused_configs = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
ignore = [
    "COM812",
    "CPY",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "D404",
    "D417",
    "DOC",
    "E501",
    "T20",
    "TD001",
    "TD002",
    "TD003",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false
